Fix font loading (local not effective for IBM Plex) and add flex gap hack for header.

--- a/src/_includes/assets/scss/objects/_font-face.scss
+++ b/src/_includes/assets/scss/objects/_font-face.scss
@@ -1,6 +1,6 @@
 @font-face {
 	font-family: "IBMPlexSans";
-	src: local("IBMPlexSans"), local("IBM Plex Sans"), url('../fonts/IBMPlexSansVar-Roman.woff2') format('woff2 supports variations'), url('../fonts/IBMPlexSansVar-Roman.woff2') format('woff2-variations');
+	src: url('../fonts/IBMPlexSansVar-Roman.woff2') format('woff2 supports variations'), url('../fonts/IBMPlexSansVar-Roman.woff2') format('woff2-variations');
 	font-style: normal;
 	font-weight: 100 700;
 	font-display: swap;
@@ -8,7 +8,7 @@
 
 @font-face {
 	font-family: "IBMPlexSans";
-	src: local("IBMPlexSans"), local("IBM Plex Sans"), url('../fonts/IBMPlexSansVar-Italic.woff2') format('woff2 supports variations'), url('../fonts/IBMPlexSansVar-Italic.woff2') format('woff2-variations');
+	src: url('../fonts/IBMPlexSansVar-Italic.woff2') format('woff2 supports variations'), url('../fonts/IBMPlexSansVar-Italic.woff2') format('woff2-variations');
 	font-style: italic;
 	font-weight: 100 700;
 	font-display: swap;
